# mfsm

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeUserPresets.json  CommonToolchain.cmake  GNUToolchain.cmake  README.md  conanfile.py  configure.sh  test.sh
cmake/: CMakeLists.txt  mfsmConfig.cmake
conan_profiles/: ClangToolchain.cmake  CommonToolchain.cmake  GNUToolchain.cmake  clang  gnu  linux
include/: CMakeLists.txt
include/mfsm/: state_machine.hpp
include/mfsm/detail/: defer_queue.hpp  row.hpp  row.ipp  special_structs.hpp  state_machine.hpp  state_machine.ipp  state_machine_back.hpp  state_machine_back.ipp  transition_table.hpp  transition_table.ipp  type_list.hpp  type_list.ipp
unit-tests/: CMakeLists.txt  test_state_machine.cpp  test_transition_table.cpp  test_type_list.cpp
